--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="avtar">
-              <img src="static/img/tree1.png">
+              <img src="static/img/tree.png">
             </div>
           </div>
           <div class="col-md-8">
