--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <li><a href="#services">Services</a></li>
             <li><a href="#awards">Awards</a></li>
             <li><a href="#awards">Media</a></li>
-            <li><a href="#miscellaneous">Miscellaneous</a></li>
+            <!-- li><a href="#miscellaneous">Miscellaneous</a></li -->
           </ul>
         </div>
         <!-- / Navbar -->
