--- a/index.html
+++ b/index.html
@@ -533,14 +533,14 @@ IEEE TNNLS, TIP, TGARS, TOC, GRSM, JBHI; Applied Soft Computing
             <h2>Awards</h2>
           </div><!-- .section-title -->
           <ul>
-            <li> • AdeptMind Scholarship, 2018 </li>
-            <li> • ICLR Travel Award, 2016, 2017, 2018 </li>
-            <li> • 2nd Place in NIPS Demonstration, 2017 </li>
-            <li> • Best workshop paper mention, NIPS 2016 </li>
-            <li> • First-class Scholarship, 2012, 2013 </li>
-            <li> • People’s Scholarship, 2011 </li>
-            <li> • Shinchang Corporation Scholarship, 2010 </li>
-            <li> • Freshman Foundation for Research and Innovation, 2008 </li>
+            <li> AdeptMind Scholarship, 2018 </li>
+            <li> ICLR Travel Award, 2016, 2017, 2018 </li>
+            <li> 2nd Place in NIPS Demonstration, 2017 </li>
+            <li> Best workshop paper mention, NIPS 2016 </li>
+            <li> First-class Scholarship, 2012, 2013 </li>
+            <li> People’s Scholarship, 2011 </li>
+            <li> Shinchang Corporation Scholarship, 2010 </li>
+            <li> Freshman Foundation for Research and Innovation, 2008 </li>
           </ul>
         </div><!-- .col-sm-6 col-xs-12 -->
 
