--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <!-- <strong>Hello! i'm Martin Luther</strong> -->
               <div class="about-actions">
                 <button class="m-btn-01 lets-talk">contact me <i class="fa fa-arrow-right"></i></button>
-                <button class="m-btn-01">download cv <i class="fa fa-arrow-right"></i></button>
+                <button class="m-btn-01"><a href="static/files/CV_Zhouhan_Lin.pdf">download cv</a> <i class="fa fa-arrow-right"></i></button>
               </div>
               <div class="social-link">
                   <ul>
