--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- meta name="keywords" content="Martin Luther, resume, cv, portfolio, personal, developer, designer, onepage, clean, modern, velocity, web" -->
   <meta name="author" content="Zhouhan Lin">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <title>Zhouhan Lin - Homepage | Montreal Institute of Learning Algorithms</title>
+  <title>Zhouhan Lin - Homepage </title>
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="milaico.ico">
 
@@ -106,11 +106,13 @@
               <h3>Zhouhan Lin (林洲汉)</h3>
               <ul class="about-me">
                 <li><strong>E-mail : </strong>lastname[dot]firstname[at]gmail.com</li>
-                <li><strong>Phone : </strong>514-586-0551</li>
+                <li><strong>Phone : </strong>650-788-4556</li>
               </ul>
-          <p>Hello! I'm Zhouhan Lin, a 5-th year Ph.D. student at MILA,
-          University of Montreal, under the supervision of Yoshua Bengio.
-          I am also a part-time student researcher in Google. <br> 
+          <p>Hello! I'm Zhouhan Lin, a visiting scientist at Facebook AI Research. 
+          In 2021, I am going to join Shanghai Jiaotong University as an assistant professor.
+          I graduated from the Mila lab in the University of Montreal, where I have
+          the honor to be supervised by Yoshua Bengio.
+          <br> 
           My research interests include machine learning and natural language
           processing, especially in attention mechanisms and its applications,
           language modeling, question answering, syntactic parsing, and binary
