--- a/index.html
+++ b/index.html
@@ -67,8 +67,14 @@
                             <span style="font-weight: 500;"><a href="https://jhc.sjtu.edu.cn/">John Hopcroft Center of Computer Science</a></span> 
                         </div>
                         <div>
-                            <span style="font-weight: 500;">E-mail :</span> lastname[dot]firstname[at]gmail.com <span style="font-weight: 500;">or</span> [github name][at][university abbreviation].edu.cn
+                            <a href="https://en.sjtu.edu.cn/">Shanghai Jiao Tong University (SJTU)</a>
                         </div>
+                        <div>
+                            <span style="font-weight: 500;">E-mail :</span> lastname[dot]firstname[at]gmail.com <span style="font-weight: 500;">or</span> 
+                        </div>
+                        <p>
+                            [github name][at][university abbreviation].edu.cn
+                        </p>
                         <p>
                             <span style="font-weight: 500;">Office :</span> Room 437, Dianyuan Building #1
                         </p>
@@ -100,8 +106,9 @@
                     I am an assistant professor at the <a href="https://jhc.sjtu.edu.cn/">John Hopcroft Center of Computer Science</a> at <a href="https://en.sjtu.edu.cn/">Shanghai Jiao Tong University (SJTU)</a>, 
                     and I am leading the <a href="https://github.com/LUMIA-Group">LUMIA group</a>. 
                     Before joining SJTU, I was a visiting scientist at <a href="https://ai.facebook.com/">Facebook AI Research (FAIR)</a> in Menlo Park, CA. 
-                    I received my Ph.D. in Computer Science from the <a href="https://mila.quebec/en/">Mila lab</a> in the <a href="https://www.umontreal.ca/en/"> University of Montreal</a>, 
-                    where I was fortunately supervised by <a href="https://mila.quebec/en/">Yoshua Bengio</a>.
+                    I received my Ph.D. in Computer Science from the <a href="https://mila.quebec/en/">Mila lab</a> in the <a href="https://www.umontreal.ca/en/"> University of Montreal</a> in 2019, 
+                    where I was fortunately supervised by <a href="https://mila.quebec/en/">Yoshua Bengio</a>. 
+                    Prior to Mila, I received my B.Sc. (2012) and M.Sc. (2014) from Harbin Institute of Technology.  
                 </p>
             </section>
             
@@ -110,10 +117,22 @@
                     Research
                 </h3>
                 <p>
-                    My core research interest is <span style="font-weight: 500;">to explore and develop machine intelligence capable of acquiring, synthesizing, reasoning, and interacting with abstract concepts</span> from large amounts of data. 
-                    Almost all of my research efforts are centered around this goal, touching a diverse range of topics such as 
-                    attention mechanisms, language modeling, conversational systems, automated summarization, grammatical inference, graph neural networks, and code generation, etc.
+                    My core research interest is <span style="font-weight: 500;">to explore and develop machine intelligence capable of acquiring, forming, reasoning, and interacting with abstract concepts</span> from large amounts of data. 
+                    Almost all of my research efforts are centered around this goal, touching on a diverse range of topics such as 
+                    attention mechanisms, language modeling, dialog systems, automated summarization, grammar induction, graph neural networks, code generation, etc. 
+                    A list of topics that I am interested in at the moment are:
                 </p>
+                <ul class="row">
+                    <li> Methods that could suppress hallucination in LLMs, such as retrieval-based methods, external memory, etc. </li>
+                    <li> Long sequence modeling, such as efficient attention mechanisms, learning multi-scale representations, etc.</li>
+                    <li> Modeling highly grammatical and structured sequences, such as SQL and code. </li>
+                    <li> Graph representation learning, especially those that include evolving graph structures.</li>
+                    <li> Self-supervised learning, especially in a cross-modal setting.</li>
+                    <li> Diet dataset for LLMs. </li>
+                    <li>22022/10: New preprint on biologically plausible learning with local activity perturbation.</li>
+                    <!-- 在这里新建一条新的news，格式如下 -->
+                    <!-- <li>新内容</li> -->
+                </ul>
             </section>
 
             <section id="teaching" class="section-item">
@@ -121,11 +140,8 @@
                     Teaching
                 </h3>
                 <ul class="row">
-                    <li>2023/04: One paper is accepted at CogSci 2023.</li>
-                    <li>2023/04: One paper is accepted at CogSci 2023.</li>
-                    <li>22022/10: New preprint on biologically plausible learning with local activity perturbation.</li>
-                    <!-- 在这里新建一条新的news，格式如下 -->
-                    <!-- <li>新内容</li> -->
+                    <li> CS-1605 Programming Practice (C++) （C++程序设计实践）</li>
+                    <li> CS-3602 Natural Language Processing （自然语言处理） </li>
                 </ul>
             </section>
             
@@ -135,11 +151,10 @@
                     News
                 </h3>
                 <ul class="row">
-                    <li>2023/04: One paper is accepted at CogSci 2023.</li>
-                    <li>2023/04: One paper is accepted at CogSci 2023.</li>
-                    <li>22022/10: New preprint on biologically plausible learning with local activity perturbation.</li>
-                    <!-- 在这里新建一条新的news，格式如下 -->
-                    <!-- <li>新内容</li> -->
+                    <li> May 2023: Two papers are accepted at ACL 2023! </li>
+                    <li> Mar. 2023: Yunchong Song has got the ICLR Travel Award! </li>
+                    <li> Feb. 2023: Two papers are accepted at ICASSP 2023! </li>
+                    <li> Jan. 2023: One paper is accepted at ICLR 2023! </li>
                 </ul>
             </section>
 
