--- a/index.html
+++ b/index.html
@@ -197,8 +197,6 @@
                                 <span> | </span>
                                 <a href="https://aclanthology.org/2023.findings-acl.570.pdf"><span>pdf</span></a>
                                 <span> | </span>
-                                <a href="http://"><span>slides</span></a>
-                                <span> | </span>
                                 <a href="https://github.com/LUMIA-Group/FourierTransformer"><span>codes</span></a>
                             </div>
                             <abstract>
@@ -229,8 +227,6 @@
                                 <span> | </span>
                                 <a href="https://arxiv.org/pdf/2302.09509.pdf"><span>pdf</span></a>
                                 <span> | </span>
-                                <a href="http://"><span>slides</span></a>
-                                <span> | </span>
                                 <a href="https://github.com/LUMIA-Group/LoT-insts"><span>codes</span></a>
                             </div>
                             <abstract>
@@ -260,8 +256,6 @@
                                 <span> | </span>
                                 <a href="https://arxiv.org/pdf/2302.01524.pdf"><span>pdf</span></a>
                                 <span> | </span>
-                                <a href="http://"><span>slides</span></a>
-                                <span> | </span>
                                 <a href="https://github.com/LUMIA-Group/OrderedGNN"><span>codes</span></a>
                             </div>
                             <abstract>
@@ -289,8 +283,6 @@
                                 <span> | </span>
                                 <a href="https://arxiv.org/pdf/2205.06983.pdf"><span>pdf</span></a>
                                 <span> | </span>
-                                <a href="http://"><span>slides</span></a>
-                                <span> | </span>
                                 <a href="https://github.com/LUMIA-Group/rasat"><span>codes</span></a>
                             </div>
                             <abstract>
@@ -309,7 +301,7 @@
                     <!-- research 1 -->
                     <div class="row">
                         <div class="col-xs-12 col-sm-4">
-                            <img width="100%" src="./assets/research/distanceparser.png" alt="" srcset="">
+                            <img width="100%" src="./assets/research/distancetransformer.png" alt="" srcset="">
                         </div>
                         <div class="col-xs-12 col-sm-8">
                             <h4>
@@ -322,8 +314,6 @@
                                 <span>EMNLP 2022 (Findings) </span>
                                 <span> | </span>
                                 <a href="https://arxiv.org/pdf/2210.11759.pdf"><span>pdf</span></a>
-                                <span> | </span>
-                                <a href="http://"><span>slides</span></a>
                                 <span> | </span>
                                 <a href="https://github.com/LUMIA-Group/distance_transformer"><span>codes</span></a>
                             </div>
@@ -341,7 +331,7 @@
                     <!-- research 1 -->
                     <div class="row">
                         <div class="col-xs-12 col-sm-4">
-                            <img width="100%" src="./assets/research/distanceparser.png" alt="" srcset="">
+                            <img width="100%" src="./assets/research/avsrpan.png" alt="" srcset="">
                         </div>
                         <div class="col-xs-12 col-sm-8">
                             <h4>
@@ -354,8 +344,6 @@
                                 <span> ACL 2022 </span>
                                 <span> | </span>
                                 <a href="https://arxiv.org/pdf/2203.07996.pdf"><span>pdf</span></a>
-                                <span> | </span>
-                                <a href="http://"><span>slides</span></a>
                                 <span> | </span>
                                 <a href="https://github.com/LUMIA-Group/Leveraging-Self-Supervised-Learning-for-AVSR"><span>codes</span></a>
                             </div>
@@ -375,7 +363,7 @@
                     <!-- research 1 -->
                     <div class="row">
                         <div class="col-xs-12 col-sm-4">
-                            <img width="100%" src="./assets/research/distanceparser.png" alt="" srcset="">
+                            <img width="100%" src="./assets/research/blockskim.png" alt="" srcset="">
                         </div>
                         <div class="col-xs-12 col-sm-8">
                             <h4>
@@ -389,9 +377,7 @@
                                 <span> | </span>
                                 <a href="https://arxiv.org/pdf/2112.08560.pdf"><span>pdf</span></a>
                                 <span> | </span>
-                                <a href="http://"><span>slides</span></a>
-                                <span> | </span>
-                                <a href="https://"><span>codes</span></a>
+                                <a href="https://github.com/chandlerguan/blockskim"><span>codes</span></a>
                             </div>
                             <abstract>
                                 We propose Block-skim,
@@ -407,7 +393,7 @@
                     <!-- research 1 -->
                     <div class="row">
                         <div class="col-xs-12 col-sm-4">
-                            <img width="100%" src="./assets/research/distanceparser.png" alt="" srcset="">
+                            <img width="100%" src="./assets/research/distancelmwenyu.png" alt="" srcset="">
                         </div>
                         <div class="col-xs-12 col-sm-8">
                             <h4>
@@ -421,9 +407,7 @@
                                 <span> | </span>
                                 <a href="https://arxiv.org/pdf/2005.05864.pdf"><span>pdf</span></a>
                                 <span> | </span>
-                                <a href="http://"><span>slides</span></a>
-                                <span> | </span>
-                                <a href="https://"><span>codes</span></a>
+                                <a href="t https://github.com/wenyudu/SDLM"><span>codes</span></a>
                             </div>
                             <abstract>
                                 It is commonly believed that knowledge of syntactic structure should improve language modeling. However, effectively and 
@@ -452,11 +436,11 @@
                             <div class="link-list">
                                 <span>ACL 2018 </span>
                                 <span> | </span>
-                                <a href="http://"><span>pdf</span></a>
+                                <a href="https://arxiv.org/pdf/1806.04168.pdf"><span>pdf</span></a>
                                 <span> | </span>
                                 <a href="http://"><span>slides</span></a>
                                 <span> | </span>
-                                <a href="http://"><span>codes</span></a>
+                                <a href="https://github.com/hantek/distance-parser"><span>codes</span></a>
                             </div>
                             <abstract>
                                 We propose a novel constituency parsing scheme. The model predicts a vector of real-valued scalars, named syntactic distances, for each split position in the input sentence. The syntactic distances specify the order in which the split points will be selected,
@@ -481,13 +465,11 @@
                             <div class="link-list">
                                 <span>ICLR 2018</span>
                                 <span> | </span>
-                                <a href="http://"><span>pdf</span></a>
+                                <a href="https://arxiv.org/pdf/1711.02013.pdf"><span>pdf</span></a>
                                 <span> | </span>
-                                <a href="http://"><span>slides</span></a>
-                                <span> | </span>
-                                <a href="http://"><span>codes</span></a>
-                                <span> | </span>
-                                <a href="http://"><span>poster</span></a>
+                                <a href="http://https://github.com/yikangshen/PRPN"><span>codes</span></a>
+                                <!-- <span> | </span> -->
+                                <!-- <a href=""><span>poster</span></a> -->
                             </div>
                             <abstract>
                                 We propose a neural language model capable of unsupervised syntactic structure induction. The model leverages the structure information to form better semantic representations and better language modeling. Standard recurrent neural networks are limited
@@ -513,13 +495,11 @@
                             <div class="link-list">
                                 <span class="time">ICLR 2017</span>
                                 <span> | </span>
-                                <a href="http://"><span>pdf</span></a>
+                                <a href="https://arxiv.org/pdf/1703.03130.pdf"><span>pdf</span></a>
                                 <span> | </span>
-                                <a href="http://"><span>slides</span></a>
-                                <span> | </span>
-                                <a href="http://"><span>codes</span></a>
-                                <span> | </span>
-                                <a href="http://"><span>poster</span></a>
+                                <a href="https://github.com/hantek/SelfAttentiveSentEmbed"><span>codes</span></a>
+                                <!-- <span> | </span> -->
+                                <!-- <a href=""><span>poster</span></a> -->
                             </div>
                             <abstract>
                                 We propose a new model for extracting an interpretable sentence embedding by introducing self-attention. Instead of using a vector, we use a 2-D matrix to represent the embedding, with each row of the matrix attending on a different part of the sentence.
@@ -545,13 +525,11 @@
                             <div class="link-list">
                                 <span class="time">ICLR 2016 (oral)</span>
                                 <span> | </span>
-                                <a href="http://"><span>pdf</span></a>
+                                <a href="https://arxiv.org/pdf/1510.03009.pdf"><span>pdf</span></a>
                                 <span> | </span>
-                                <a href="http://"><span>slides</span></a>
-                                <span> | </span>
-                                <a href="http://"><span>codes</span></a>
-                                <span> | </span>
-                                <a href="http://"><span>poster</span></a>
+                                <a href="https://github.com/hantek/BinaryConnect"><span>codes</span></a>
+                                <!-- <span> | </span> -->
+                                <!-- <a href=""><span>poster</span></a> -->
                             </div>
                             <abstract>
                                 For most deep learning algorithms training is notoriously time consuming. Since most of the computation in training neural networks is typically spent on floating point multiplications, we investigate an approach to training that eliminates the need
@@ -578,9 +556,9 @@
                             <div class="link-list">
                                 <span class="time">Journal of Selected Topics in Applied Earth Observations and Remote Sensing, 2014</span>
                                 <span> | </span>
-                                <a href="http://"><span>pdf</span></a>
+                                <a href="https://ieeexplore.ieee.org/document/6844831/?arnumber=6844831"><span>pdf</span></a>
                                 <span> | </span>
-                                <a href="http://"><span>codes</span></a>
+                                <a href="https://github.com/hantek/deeplearn_hsi"><span>codes</span></a>
                             </div>
                             <abstract>
                                 Classification is one of the most popular topics in hyperspectral remote sensing. In the last two decades, a huge number of methods were proposed to deal with the hyperspectral data classification problem. However, most of them do not hierarchically extract
