feat:add icons: scholar, github

--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
                                 <img src="./assets/twitter.svg" alt="" srcset="">
                             </a>
                             <a href="https://ca.linkedin.com/in/zhouhan-lin-34b98975" target="_blank">
-                                <img src="./assets//linkedin.svg" alt="" srcset="">
+                                <img src="./assets/linkedin.svg" alt="" srcset="">
                             </a>
                             <a href="https://www.zhihu.com/people/linzhouhan" target="_blank">
-                                <img src="./assets//zhihu.svg" alt="" srcset="">
+                                <img src="./assets/zhihu.svg" alt="" srcset="">
                             </a>
                             <a href="https://scholar.google.com/citations?user=LNZ4efwAAAAJ&hl=en" target="_blank">
-                                <img src="./assets//googlescholar.svg" alt="" srcset="">
+                                <img src="./assets//gscholar.png" alt="" srcset="" style="width: 32px;">
                             </a>
                             <a href="https://www.semanticscholar.org/author/Zhouhan-Lin/3146592" target="_blank">
-                                <img src="./assets//semanticscholar.svg" alt="" srcset="">
+                                <img src="./assets/sscholar.png" alt="" srcset="">
                             </a>
                             <a href="https://github.com/hantek" target="_blank">
-                                <img src="./assets//github.svg" alt="" srcset="">
+                                <img src="./assets/github.svg" alt="" srcset="">
                             </a>
 
                         </p>
