--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="col-xs-12 col-sm-8">
                         <h2 style="margin-bottom: 24px;">Zhouhan Lin (林洲汉)</h2>
                         <div>
-                            <span style="font-weight: 500;">Assistant Professor</span>
+                            <span style="font-weight: 500; font-size: 24px;">Assistant Professor</span>
                         </div>
                         <div>
                             <span style="font-weight: 500;"><a href="https://jhc.sjtu.edu.cn/">John Hopcroft Center of Computer Science</a></span>
@@ -69,18 +69,22 @@
                         <div>
                             <span style="font-weight: 500;"><a href="https://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a></span>
                         </div>
-                        <div>
-                            <span style="font-weight: 500;">E-mail :</span> lastname[dot]firstname[the simbol]gmail.com <span style="font-weight: 500;">or</span>
+                        <div style="display: flex;">
+                            <div style="margin-right: 4px;">
+                                <span style="font-weight: 500;">E-mail : 
+                            </div>
+                            <div>
+                                <span> lastname[dot]firstname[the simbol]gmail.com <span style="font-weight: 500;">or</span></span>
+                                <p>[github name][the simbol][university abbreviation].edu.cn</p>
+                            </div>
                         </div>
-                        <p>
-                            [github name][the simbol][university abbreviation].edu.cn
-                        </p>
+
                         <p>
                             <span style="font-weight: 500;">Office :</span> Room 437, Dianyuan Building #1
                         </p>
                         <p class="link-block">
                             <a href="https://www.facebook.com/zhouhan.lin.9/" target="_blank">
-                                <img src="./assets/facebook.svg" alt="" srcset="">
+                                <img src="./assets/facebook.svg" alt="" srcset="" style="width: 32px;">
                             </a>
                             <a href="https://twitter.com/zhouhan_lin" target="_blank">
                                 <img src="./assets/twitter.svg" alt="" srcset="">
