--- a/index.html
+++ b/index.html
@@ -83,18 +83,6 @@
                             <span style="font-weight: 500;">Office :</span> Room 437, Dianyuan Building #1
                         </p>
                         <p class="link-block">
-                            <a href="https://www.facebook.com/zhouhan.lin.9/" target="_blank">
-                                <img src="./assets/facebook.svg" alt="" srcset="" style="width: 32px;">
-                            </a>
-                            <a href="https://twitter.com/zhouhan_lin" target="_blank">
-                                <img src="./assets/twitter.svg" alt="" srcset="">
-                            </a>
-                            <a href="https://ca.linkedin.com/in/zhouhan-lin-34b98975" target="_blank">
-                                <img src="./assets/linkedin.svg" alt="" srcset="">
-                            </a>
-                            <a href="https://www.zhihu.com/people/linzhouhan" target="_blank">
-                                <img src="./assets/zhihu.svg" alt="" srcset="">
-                            </a>
                             <a href="https://scholar.google.com/citations?user=LNZ4efwAAAAJ&hl=en" target="_blank">
                                 <img src="./assets//gscholar.png" alt="" srcset="" style="width: 32px;">
                             </a>
@@ -104,7 +92,18 @@
                             <a href="https://github.com/hantek" target="_blank">
                                 <img src="./assets/github.svg" alt="" srcset="">
                             </a>
-
+                            <a href="https://www.zhihu.com/people/linzhouhan" target="_blank">
+                                <img src="./assets/zhihu.svg" alt="" srcset="">
+                            </a>
+                            <a href="https://www.facebook.com/zhouhan.lin.9/" target="_blank">
+                                <img src="./assets/facebook.svg" alt="" srcset="" style="width: 32px;">
+                            </a>
+                            <a href="https://twitter.com/zhouhan_lin" target="_blank">
+                                <img src="./assets/twitter.svg" alt="" srcset="">
+                            </a>
+                            <a href="https://ca.linkedin.com/in/zhouhan-lin-34b98975" target="_blank">
+                                <img src="./assets/linkedin.svg" alt="" srcset="">
+                            </a>
                         </p>
                     </div>
                 </div>
@@ -117,9 +116,16 @@
                     Bio
                 </h3>
                 <p>
-                    I am an assistant professor at the <a href="https://jhc.sjtu.edu.cn/">John Hopcroft Center of Computer Science</a> at <a href="https://en.sjtu.edu.cn/">Shanghai Jiao Tong University (SJTU)</a>, and I am leading the <a href="https://github.com/LUMIA-Group">LUMIA group</a>.
-                    Before joining SJTU, I was a visiting scientist at <a href="https://ai.facebook.com/">Facebook AI Research (FAIR)</a> in Menlo Park, CA. I received my Ph.D. in Computer Science from the <a href="https://mila.quebec/en/">Mila lab</a>                    in the <a href="https://www.umontreal.ca/en/"> University of Montreal</a> in 2019, where I was fortunately supervised by <a href="https://mila.quebec/en/">Yoshua Bengio</a>. Prior to Mila, I received my B.Sc. (2012) and M.Sc. (2014)
-                    from Harbin Institute of Technology.
+                    I am an assistant professor at the 
+                    <a href="https://jhc.sjtu.edu.cn/">John Hopcroft Center of Computer Science</a> 
+                    at <a href="https://en.sjtu.edu.cn/">Shanghai Jiao Tong University (SJTU)</a>, 
+                    and I am leading the <a href="https://github.com/LUMIA-Group">LUMIA group</a>.
+                    Before joining SJTU, I was a visiting scientist at <a href="https://ai.facebook.com/">Facebook AI Research (FAIR)</a> in Menlo Park, CA. 
+                    I received my Ph.D. in Computer Science from the <a href="https://mila.quebec/en/">Mila lab</a> 
+                    in the <a href="https://www.umontreal.ca/en/"> University of Montreal</a> in 2019, 
+                    where I was fortunately supervised by <a href="https://yoshuabengio.org/">Yoshua Bengio</a>. 
+                    Prior to Mila, I received my B.Sc. (2012) and M.Sc. (2014) from 
+                    <a href="http://en.hit.edu.cn/">Harbin Institute of Technology</a>.
                 </p>
             </section>
 
@@ -180,6 +186,10 @@
                     <span style="font-weight: 500;">This is a selected list of my publications. For an up-to-date, complete list, please refer to 
                         <a href="https://scholar.google.com/citations?user=LNZ4efwAAAAJ&hl=en">my Google Scholar page</a>. </span>
                 </p>
+                <p>
+                    <span style="font-weight: 500;">(*) indicates equal contribution. (#) indicates the corresponding author. </span>
+                </p>
+
                 <section class="research-section">
                     <!-- research 1 -->
                     <div class="row">
