--- a/index.html
+++ b/index.html
@@ -120,13 +120,25 @@
                     <a href="https://jhc.sjtu.edu.cn/">John Hopcroft Center of Computer Science</a> 
                     at <a href="https://en.sjtu.edu.cn/">Shanghai Jiao Tong University (SJTU)</a>, 
                     and I am leading the <a href="https://github.com/LUMIA-Group">LUMIA group</a>.
-                    Before joining SJTU, I was a visiting scientist at <a href="https://ai.facebook.com/">Facebook AI Research (FAIR)</a> in Menlo Park, CA. 
+                    Before joining SJTU, I was a visiting scientist at <a href="https://ai.facebook.com/">Facebook AI Research (FAIR)</a> in Menlo Park, CA, 
+                    working with <a href="https://michaelauli.github.io/">Michael Auli</a>. 
                     I received my Ph.D. in Computer Science from the <a href="https://mila.quebec/en/">Mila lab</a> 
                     in the <a href="https://www.umontreal.ca/en/"> University of Montreal</a> in 2019, 
                     where I was fortunately supervised by <a href="https://yoshuabengio.org/">Yoshua Bengio</a>. 
+                    During my Ph.D., I've been interning at Google AI in the 
+                    <a href="https://research.google/teams/language/">Language team</a> in New York City, at <a href="https://www.ibm.com/watson">IBM Watson</a> 
+                    with <a href="https://scholar.google.com/citations?user=h3Nsz6YAAAAJ&hl=en">Bowen Zhou</a> and 
+                    <a href="https://sites.google.com/site/moyunlp/">Mo Yu</a> in Yorktown Height, NY. I also worked as a part-time student researcher at Microsoft Research
+                    with <a href="https://www.microsoft.com/en-us/research/people/alsordon/">Alessandro Sordoni</a> in Montreal.
                     Prior to Mila, I received my B.Sc. (2012) and M.Sc. (2014) from 
-                    <a href="http://en.hit.edu.cn/">Harbin Institute of Technology</a>.
+                    <a href="http://en.hit.edu.cn/">Harbin Institute of Technology</a>. For more information, you can find my CV <a href="src="assets/CV_Zhouhan_Lin.pdf"">here</a>. 
                 </p>
+                <p>
+                    At the moment, I am actively looking for highly motivated undergrads, interns, and prospective Master's (2024) or Ph.D. (2025) students to work with me. 
+                    Unfortunately, I have no more Ph.D. positions available for the year 2024. 
+                    If you are interested in my research topics, please drop me an email.
+                </p>
+
             </section>
 
             <section id="research" class="section-item">
