--- a/index.html
+++ b/index.html
@@ -126,10 +126,12 @@
                     in the <a href="https://www.umontreal.ca/en/"> University of Montreal</a> in 2019, 
                     where I was fortunately supervised by <a href="https://yoshuabengio.org/">Yoshua Bengio</a>. 
                     During my Ph.D., I've been interning at Google AI in the 
-                    <a href="https://research.google/teams/language/">Language team</a> in New York City, at <a href="https://www.ibm.com/watson">IBM Watson</a> 
+                    <a href="https://research.google/teams/language/">Language team</a> in New York City, and at <a href="https://www.ibm.com/watson">IBM Watson</a> 
                     with <a href="https://scholar.google.com/citations?user=h3Nsz6YAAAAJ&hl=en">Bowen Zhou</a> and 
-                    <a href="https://sites.google.com/site/moyunlp/">Mo Yu</a> in Yorktown Height, NY. I also worked as a part-time student researcher at Microsoft Research
-                    with <a href="https://www.microsoft.com/en-us/research/people/alsordon/">Alessandro Sordoni</a> in Montreal.
+                    <a href="https://sites.google.com/site/moyunlp/">Mo Yu</a> in Yorktown Height, NY. I also worked as a part-time student researcher at 
+                    <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-montreal/">Microsoft Research</a>
+                    with <a href="https://www.microsoft.com/en-us/research/people/alsordon/">Alessandro Sordoni</a> and 
+                    <a href="https://scholar.google.ca/citations?hl=en">Adam Trischler</a> in Montreal.
                     Prior to Mila, I received my B.Sc. (2012) and M.Sc. (2014) from 
                     <a href="http://en.hit.edu.cn/">Harbin Institute of Technology</a>. For more information, you can find my CV <a href="src="assets/CV_Zhouhan_Lin.pdf"">here</a>. 
                 </p>
