--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     with <a href="https://www.microsoft.com/en-us/research/people/alsordon/">Alessandro Sordoni</a> and 
                     <a href="https://scholar.google.ca/citations?hl=en">Adam Trischler</a> in Montreal.
                     Prior to Mila, I received my B.Sc. (2012) and M.Sc. (2014) from 
-                    <a href="http://en.hit.edu.cn/">Harbin Institute of Technology</a>. For more information, you can find my CV <a href="src="assets/CV_Zhouhan_Lin.pdf"">here</a>. 
+                    <a href="http://en.hit.edu.cn/">Harbin Institute of Technology</a>. For more information, you can find my CV <a href="assets/CV_Zhouhan_Lin.pdf">here</a>. 
                 </p>
                 <p>
                     At the moment, I am actively looking for highly motivated undergrads, interns, and prospective Master's (2024) or Ph.D. (2025) students to work with me. 
