--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
                     <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-montreal/">Microsoft Research</a>
                     with <a href="https://www.microsoft.com/en-us/research/people/alsordon/">Alessandro Sordoni</a> and 
                     <a href="https://scholar.google.ca/citations?hl=en">Adam Trischler</a> in Montreal.
-                    Prior to Mila, I received my B.Sc. (2012) and M.Sc. (2014) from 
+                    Prior to Mila, I received my B.Sc. (2012) and M.Sc. (2014) degrees from 
                     <a href="http://en.hit.edu.cn/">Harbin Institute of Technology</a>. For more information, you can find my CV <a href="assets/CV_Zhouhan_Lin.pdf">here</a>. 
                 </p>
                 <p>
-                    At the moment, I am actively looking for highly motivated undergrads, interns, and prospective Master's (2024) or Ph.D. (2025) students to work with me. 
-                    Unfortunately, I have no more Ph.D. positions available for the year 2024. 
-                    If you are interested in my research topics, please drop me an email.
+                    Currently, I am actively looking for highly motivated undergrads, interns, and prospective Master's (2025) or Ph.D. (2025) students to work with me. 
+                    Unfortunately, I have no more Ph.D. or Master's positions available for year 2024. 
+                    If you are interested in my research topics, please email me.
                 </p>
 
             </section>
@@ -180,6 +180,7 @@
                     News
                 </h3>
                 <ul class="row">
+                    <li> Sep 2023: <a href="https://openreview.net/pdf?id=t2hEZadBBk">One paper</a> got accepted at NeurIPS 2023! </li>
                     <li> May 2023: Two papers (<a href="https://aclanthology.org/2023.acl-long.281/">[1]</a><a href="https://aclanthology.org/2023.findings-acl.570/">[2]</a>) are accepted at ACL 2023! </li>
                     <li> Mar. 2023: <a href="https://scholar.google.com/citations?user=C-TqDNsAAAAJ">Yunchong Song</a> has got the ICLR Travel Award, congratuations! </li>
                     <li> Feb. 2023: Two papers (<a href="https://arxiv.org/abs/2302.09509">[1]</a><a href="https://arxiv.org/abs/2304.05361">[2]</a>) are accepted at ICASSP 2023! </li>
